--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="col-sm-8 pull-right text-right">
            <div class="margin-100">
             
-             <img class="logo-hero" src="../../Creative Cloud Files/1x/Asset 1.png" width="1170" height="469" alt=""/>
+             <img class="logo-hero" src="img/objectrlogo.png" width="1170" height="469" alt=""/>
              <h3>Crowdsourcing organizational intelligence into collaborative resources </h3>
            </div>
             <a href="#bottom" class="btn btn-primary btn-lg scrollLink">Join our beta <i class="fa fa-bell"></i></a>
@@ -94,7 +94,7 @@
           </div>
           
           <div class="col-sm-6 wow fadeInUpBig">
-            <img class="main1-img img-responsive pull-right" src="../../Creative Cloud Files/1x/Asset 2.png" alt="Main1 Image">
+            <img class="main1-img img-responsive pull-right" src="img/objectr-graph.png" alt="Main1 Image">
           </div>
         </div>
       </div>
