--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
           </button>
 			<div class="logo-container">
-          <a class="logo" href="index.html"><img class="logo" src="../../Creative Cloud Files/1x/Asset 3.png" alt="Logo"></a></div>
+          <a class="logo" href="index.html"><img class="logo" src="img/objectricon.png" alt="Logo"></a></div>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
