--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
   <meta charset="utf-8">
-  <title>Welcome To Perth</title>
+  <title>Objection Handling Software | Objectr</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
@@ -141,13 +141,20 @@
         <div class="row">
           <div class="col-sm-12 text-center">
             <p><strong><em>Join our mailing list to sign up for our wait list</em></strong></p>
-            <form class="form-inline" role="form">
-              <div class="form-group">
-                <label class="sr-only" for="exampleInputEmail2">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter email">
-              </div>
-              <button type="submit" class="btn btn-secondary btn-lg">Sign Up</button>
-            </form>
+			  <!-- Begin Mailchimp Signup Form -->
+
+<div id="mc_embed_signup" class="form-inline">
+<form action="https://gmail.us20.list-manage.com/subscribe/post?u=6e550430006dd8816122cb800&amp;id=b7044d5188" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6e550430006dd8816122cb800_b7044d5188" tabindex="-1" value=""></div>
+    <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="btn btn-secondary btn-lg"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
           </div>
         </div>
         
